23-Feb-2013 Throw an exception if the package version specified on the command line does not match the *single* version in the package definition file.

23-Feb-2013 From the C package, deprecating the addition of the #define D_OPUS_PLATFORM_<specific EPlatform>. Now D_OPUS_PLATFORM_WINDOWS, D_OPUS_PLATFORM_LINUX, D_OPUS_PLATFORM_OSX are set. Use D_OPUS_PLATFORM_BITS to distinguish between 32 and 64 bit builds.

15-Feb-2012 Adding more circular dependency analysis to avoid issues generating graphs.

07-Feb-2012 Fixing -createpackageat such that an invalidly specified pathname does not result in the creation of any directories.

06-Feb-2012 Setting the number of jobs to zero, will now set the job count to be equal to the number of processors available.

06-Feb-2013 Loosened requirements for -showdefinition to locate packages in package roots. If versions of a package are available, but does not match one desired, this will not throw an exception, but will indicate a missing package in the results.

06-Feb-2013 Released 0.50 Alpha 2

05-Feb-2013 DependencyNodes can now be excluded from build scheduling. This allows nodes to persist within the graph, and benefit from graph manipulations, but be quickly passed over if they are not actually needed. For example, in the case of a simple C/C++ setup, with two dependent static libraries. Building just one does not require the other to be built to satisfy the build. Using Opus.Core.IForwardDependenciesOn will re-enable nodes for build scheduling if future dependencies require them.

04-Feb-2013 Added Opus.Core.IForwardDependenciesOn, which if used on a module type, will forward all of it's dependencies onto parent nodes. For example, if a C.StaticLibrary is dependent upon another StaticLibrary, that dependency is not used until an application links the first library. Then both are required to satisfy symbol requirements.
